grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CTE_BOOL

Grammar

Rule 0     S' -> empezar
Rule 1     empezar -> PROGRAM ID SEMICOMMA var_or_func END
Rule 2     var_or_func -> vars func_create
Rule 3     var_or_func -> func_create
Rule 4     func_create -> funcs func_create
Rule 5     func_create -> EMPTY
Rule 6     body -> LBRACE statment RBRACE
Rule 7     statment -> assign statment
Rule 8     statment -> assign
Rule 9     statment -> conditions
Rule 10    statment -> conditions statment
Rule 11    statment -> fcall
Rule 12    statment -> fcall statment
Rule 13    statment -> imprimir statment
Rule 14    statment -> imprimir
Rule 15    statment -> cycle statment
Rule 16    statment -> cycle
Rule 17    statment -> vars
Rule 18    statment -> vars statment
Rule 19    assign -> ID EQ expression SEMICOMMA
Rule 20    assign -> ID EQ cte SEMICOMMA
Rule 21    cte -> CTE_INT
Rule 22    cte -> CTE_FLOAT
Rule 23    funcs -> VOID ID LPAR func_vars RPAR body SEMICOMMA
Rule 24    func_vars -> ID DOUBLEPOINT type func_vars
Rule 25    func_vars -> COMMA func_vars
Rule 26    func_vars -> EMPTY
Rule 27    expression -> exp op
Rule 28    op -> GT exp
Rule 29    op -> GTE exp
Rule 30    op -> LT exp
Rule 31    op -> LTE exp
Rule 32    op -> NT exp
Rule 33    op -> EMPTY
Rule 34    exp -> termino lopb
Rule 35    lopb -> PLUS termino
Rule 36    lopb -> MINUS termino
Rule 37    lopb -> EMPTY
Rule 38    termino -> factor lopa
Rule 39    lopa -> TIMES factor
Rule 40    lopa -> DIVIDE factor
Rule 41    lopa -> EMPTY
Rule 42    cycle -> WHILE body DO LPAR expression RPAR SEMICOMMA
Rule 43    fcall -> ID LPAR list_exp RPAR SEMICOMMA
Rule 44    list_exp -> expression list_exp
Rule 45    list_exp -> EMPTY
Rule 46    list_exp -> COMMA list_exp
Rule 47    factor -> LPAR expression RPAR
Rule 48    factor -> lopb id_cte
Rule 49    factor -> id_cte
Rule 50    id_cte -> ID
Rule 51    id_cte -> cte
Rule 52    conditions -> IF LPAR expression RPAR body haselse SEMICOMMA
Rule 53    haselse -> ELSE body
Rule 54    haselse -> EMPTY
Rule 55    imprimir -> PRINT LPAR lst_printing_options RPAR SEMICOMMA
Rule 56    lst_printing_options -> CTE_STRING COMMA lst_printing_options
Rule 57    lst_printing_options -> expression
Rule 58    lst_printing_options -> expression COMMA lst_printing_options
Rule 59    lst_printing_options -> vars
Rule 60    lst_printing_options -> vars COMMA lst_printing_options
Rule 61    lst_printing_options -> CTE_STRING
Rule 62    vars -> VAR lst_var
Rule 63    lst_var -> lst_id DOUBLEPOINT type SEMICOMMA
Rule 64    lst_var -> EMPTY
Rule 65    lst_id -> ID lst_id
Rule 66    lst_id -> COMMA lst_id
Rule 67    lst_id -> EMPTY
Rule 68    type -> INT
Rule 69    type -> FLOAT
Rule 70    type -> VOID
Rule 71    EMPTY -> <empty>

Terminals, with rules where they appear

COMMA                : 25 46 56 58 60 66
CTE_BOOL             : 
CTE_FLOAT            : 22
CTE_INT              : 21
CTE_STRING           : 56 61
DIVIDE               : 40
DO                   : 42
DOUBLEPOINT          : 24 63
ELSE                 : 53
END                  : 1
EQ                   : 19 20
FLOAT                : 69
GT                   : 28
GTE                  : 29
ID                   : 1 19 20 23 24 43 50 65
IF                   : 52
INT                  : 68
LBRACE               : 6
LPAR                 : 23 42 43 47 52 55
LT                   : 30
LTE                  : 31
MINUS                : 36
NT                   : 32
PLUS                 : 35
PRINT                : 55
PROGRAM              : 1
RBRACE               : 6
RPAR                 : 23 42 43 47 52 55
SEMICOMMA            : 1 19 20 23 42 43 52 55 63
TIMES                : 39
VAR                  : 62
VOID                 : 23 70
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

EMPTY                : 5 26 33 37 41 45 54 64 67
assign               : 7 8
body                 : 23 42 52 53
conditions           : 9 10
cte                  : 20 51
cycle                : 15 16
empezar              : 0
exp                  : 27 28 29 30 31 32
expression           : 19 42 44 47 52 57 58
factor               : 38 39 40
fcall                : 11 12
func_create          : 2 3 4
func_vars            : 23 24 25
funcs                : 4
haselse              : 52
id_cte               : 48 49
imprimir             : 13 14
list_exp             : 43 44 46
lopa                 : 38
lopb                 : 34 48
lst_id               : 63 65 66
lst_printing_options : 55 56 58 60
lst_var              : 62
op                   : 27
statment             : 6 7 10 12 13 15 18
termino              : 34 35 36
type                 : 24 63
var_or_func          : 1
vars                 : 2 17 18 59 60

Parsing method: LALR

state 0

    (0) S' -> . empezar
    (1) empezar -> . PROGRAM ID SEMICOMMA var_or_func END

    PROGRAM         shift and go to state 2

    empezar                        shift and go to state 1

state 1

    (0) S' -> empezar .



state 2

    (1) empezar -> PROGRAM . ID SEMICOMMA var_or_func END

    ID              shift and go to state 3


state 3

    (1) empezar -> PROGRAM ID . SEMICOMMA var_or_func END

    SEMICOMMA       shift and go to state 4


state 4

    (1) empezar -> PROGRAM ID SEMICOMMA . var_or_func END
    (2) var_or_func -> . vars func_create
    (3) var_or_func -> . func_create
    (62) vars -> . VAR lst_var
    (4) func_create -> . funcs func_create
    (5) func_create -> . EMPTY
    (23) funcs -> . VOID ID LPAR func_vars RPAR body SEMICOMMA
    (71) EMPTY -> .

    VAR             shift and go to state 8
    VOID            shift and go to state 11
    END             reduce using rule 71 (EMPTY -> .)

    var_or_func                    shift and go to state 5
    vars                           shift and go to state 6
    func_create                    shift and go to state 7
    funcs                          shift and go to state 9
    EMPTY                          shift and go to state 10

state 5

    (1) empezar -> PROGRAM ID SEMICOMMA var_or_func . END

    END             shift and go to state 12


state 6

    (2) var_or_func -> vars . func_create
    (4) func_create -> . funcs func_create
    (5) func_create -> . EMPTY
    (23) funcs -> . VOID ID LPAR func_vars RPAR body SEMICOMMA
    (71) EMPTY -> .

    VOID            shift and go to state 11
    END             reduce using rule 71 (EMPTY -> .)

    func_create                    shift and go to state 13
    funcs                          shift and go to state 9
    EMPTY                          shift and go to state 10

state 7

    (3) var_or_func -> func_create .

    END             reduce using rule 3 (var_or_func -> func_create .)


state 8

    (62) vars -> VAR . lst_var
    (63) lst_var -> . lst_id DOUBLEPOINT type SEMICOMMA
    (64) lst_var -> . EMPTY
    (65) lst_id -> . ID lst_id
    (66) lst_id -> . COMMA lst_id
    (67) lst_id -> . EMPTY
    (71) EMPTY -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for COMMA resolved as shift
    ID              shift and go to state 17
    COMMA           shift and go to state 18
    VOID            reduce using rule 71 (EMPTY -> .)
    END             reduce using rule 71 (EMPTY -> .)
    IF              reduce using rule 71 (EMPTY -> .)
    PRINT           reduce using rule 71 (EMPTY -> .)
    WHILE           reduce using rule 71 (EMPTY -> .)
    VAR             reduce using rule 71 (EMPTY -> .)
    RBRACE          reduce using rule 71 (EMPTY -> .)
    RPAR            reduce using rule 71 (EMPTY -> .)
    DOUBLEPOINT     reduce using rule 71 (EMPTY -> .)

  ! ID              [ reduce using rule 71 (EMPTY -> .) ]
  ! COMMA           [ reduce using rule 71 (EMPTY -> .) ]

    lst_var                        shift and go to state 14
    lst_id                         shift and go to state 15
    EMPTY                          shift and go to state 16

state 9

    (4) func_create -> funcs . func_create
    (4) func_create -> . funcs func_create
    (5) func_create -> . EMPTY
    (23) funcs -> . VOID ID LPAR func_vars RPAR body SEMICOMMA
    (71) EMPTY -> .

    VOID            shift and go to state 11
    END             reduce using rule 71 (EMPTY -> .)

    funcs                          shift and go to state 9
    func_create                    shift and go to state 19
    EMPTY                          shift and go to state 10

state 10

    (5) func_create -> EMPTY .

    END             reduce using rule 5 (func_create -> EMPTY .)


state 11

    (23) funcs -> VOID . ID LPAR func_vars RPAR body SEMICOMMA

    ID              shift and go to state 20


state 12

    (1) empezar -> PROGRAM ID SEMICOMMA var_or_func END .

    $end            reduce using rule 1 (empezar -> PROGRAM ID SEMICOMMA var_or_func END .)


state 13

    (2) var_or_func -> vars func_create .

    END             reduce using rule 2 (var_or_func -> vars func_create .)


state 14

    (62) vars -> VAR lst_var .

    VOID            reduce using rule 62 (vars -> VAR lst_var .)
    END             reduce using rule 62 (vars -> VAR lst_var .)
    ID              reduce using rule 62 (vars -> VAR lst_var .)
    IF              reduce using rule 62 (vars -> VAR lst_var .)
    PRINT           reduce using rule 62 (vars -> VAR lst_var .)
    WHILE           reduce using rule 62 (vars -> VAR lst_var .)
    VAR             reduce using rule 62 (vars -> VAR lst_var .)
    RBRACE          reduce using rule 62 (vars -> VAR lst_var .)
    COMMA           reduce using rule 62 (vars -> VAR lst_var .)
    RPAR            reduce using rule 62 (vars -> VAR lst_var .)


state 15

    (63) lst_var -> lst_id . DOUBLEPOINT type SEMICOMMA

    DOUBLEPOINT     shift and go to state 21


state 16

    (64) lst_var -> EMPTY .
    (67) lst_id -> EMPTY .

    VOID            reduce using rule 64 (lst_var -> EMPTY .)
    END             reduce using rule 64 (lst_var -> EMPTY .)
    ID              reduce using rule 64 (lst_var -> EMPTY .)
    IF              reduce using rule 64 (lst_var -> EMPTY .)
    PRINT           reduce using rule 64 (lst_var -> EMPTY .)
    WHILE           reduce using rule 64 (lst_var -> EMPTY .)
    VAR             reduce using rule 64 (lst_var -> EMPTY .)
    RBRACE          reduce using rule 64 (lst_var -> EMPTY .)
    COMMA           reduce using rule 64 (lst_var -> EMPTY .)
    RPAR            reduce using rule 64 (lst_var -> EMPTY .)
    DOUBLEPOINT     reduce using rule 67 (lst_id -> EMPTY .)


state 17

    (65) lst_id -> ID . lst_id
    (65) lst_id -> . ID lst_id
    (66) lst_id -> . COMMA lst_id
    (67) lst_id -> . EMPTY
    (71) EMPTY -> .

    ID              shift and go to state 17
    COMMA           shift and go to state 18
    DOUBLEPOINT     reduce using rule 71 (EMPTY -> .)

    lst_id                         shift and go to state 22
    EMPTY                          shift and go to state 23

state 18

    (66) lst_id -> COMMA . lst_id
    (65) lst_id -> . ID lst_id
    (66) lst_id -> . COMMA lst_id
    (67) lst_id -> . EMPTY
    (71) EMPTY -> .

    ID              shift and go to state 17
    COMMA           shift and go to state 18
    DOUBLEPOINT     reduce using rule 71 (EMPTY -> .)

    lst_id                         shift and go to state 24
    EMPTY                          shift and go to state 23

state 19

    (4) func_create -> funcs func_create .

    END             reduce using rule 4 (func_create -> funcs func_create .)


state 20

    (23) funcs -> VOID ID . LPAR func_vars RPAR body SEMICOMMA

    LPAR            shift and go to state 25


state 21

    (63) lst_var -> lst_id DOUBLEPOINT . type SEMICOMMA
    (68) type -> . INT
    (69) type -> . FLOAT
    (70) type -> . VOID

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    VOID            shift and go to state 29

    type                           shift and go to state 26

state 22

    (65) lst_id -> ID lst_id .

    DOUBLEPOINT     reduce using rule 65 (lst_id -> ID lst_id .)


state 23

    (67) lst_id -> EMPTY .

    DOUBLEPOINT     reduce using rule 67 (lst_id -> EMPTY .)


state 24

    (66) lst_id -> COMMA lst_id .

    DOUBLEPOINT     reduce using rule 66 (lst_id -> COMMA lst_id .)


state 25

    (23) funcs -> VOID ID LPAR . func_vars RPAR body SEMICOMMA
    (24) func_vars -> . ID DOUBLEPOINT type func_vars
    (25) func_vars -> . COMMA func_vars
    (26) func_vars -> . EMPTY
    (71) EMPTY -> .

    ID              shift and go to state 30
    COMMA           shift and go to state 32
    RPAR            reduce using rule 71 (EMPTY -> .)

    func_vars                      shift and go to state 31
    EMPTY                          shift and go to state 33

state 26

    (63) lst_var -> lst_id DOUBLEPOINT type . SEMICOMMA

    SEMICOMMA       shift and go to state 34


state 27

    (68) type -> INT .

    SEMICOMMA       reduce using rule 68 (type -> INT .)
    ID              reduce using rule 68 (type -> INT .)
    COMMA           reduce using rule 68 (type -> INT .)
    RPAR            reduce using rule 68 (type -> INT .)


state 28

    (69) type -> FLOAT .

    SEMICOMMA       reduce using rule 69 (type -> FLOAT .)
    ID              reduce using rule 69 (type -> FLOAT .)
    COMMA           reduce using rule 69 (type -> FLOAT .)
    RPAR            reduce using rule 69 (type -> FLOAT .)


state 29

    (70) type -> VOID .

    SEMICOMMA       reduce using rule 70 (type -> VOID .)
    ID              reduce using rule 70 (type -> VOID .)
    COMMA           reduce using rule 70 (type -> VOID .)
    RPAR            reduce using rule 70 (type -> VOID .)


state 30

    (24) func_vars -> ID . DOUBLEPOINT type func_vars

    DOUBLEPOINT     shift and go to state 35


state 31

    (23) funcs -> VOID ID LPAR func_vars . RPAR body SEMICOMMA

    RPAR            shift and go to state 36


state 32

    (25) func_vars -> COMMA . func_vars
    (24) func_vars -> . ID DOUBLEPOINT type func_vars
    (25) func_vars -> . COMMA func_vars
    (26) func_vars -> . EMPTY
    (71) EMPTY -> .

    ID              shift and go to state 30
    COMMA           shift and go to state 32
    RPAR            reduce using rule 71 (EMPTY -> .)

    func_vars                      shift and go to state 37
    EMPTY                          shift and go to state 33

state 33

    (26) func_vars -> EMPTY .

    RPAR            reduce using rule 26 (func_vars -> EMPTY .)


state 34

    (63) lst_var -> lst_id DOUBLEPOINT type SEMICOMMA .

    VOID            reduce using rule 63 (lst_var -> lst_id DOUBLEPOINT type SEMICOMMA .)
    END             reduce using rule 63 (lst_var -> lst_id DOUBLEPOINT type SEMICOMMA .)
    ID              reduce using rule 63 (lst_var -> lst_id DOUBLEPOINT type SEMICOMMA .)
    IF              reduce using rule 63 (lst_var -> lst_id DOUBLEPOINT type SEMICOMMA .)
    PRINT           reduce using rule 63 (lst_var -> lst_id DOUBLEPOINT type SEMICOMMA .)
    WHILE           reduce using rule 63 (lst_var -> lst_id DOUBLEPOINT type SEMICOMMA .)
    VAR             reduce using rule 63 (lst_var -> lst_id DOUBLEPOINT type SEMICOMMA .)
    RBRACE          reduce using rule 63 (lst_var -> lst_id DOUBLEPOINT type SEMICOMMA .)
    COMMA           reduce using rule 63 (lst_var -> lst_id DOUBLEPOINT type SEMICOMMA .)
    RPAR            reduce using rule 63 (lst_var -> lst_id DOUBLEPOINT type SEMICOMMA .)


state 35

    (24) func_vars -> ID DOUBLEPOINT . type func_vars
    (68) type -> . INT
    (69) type -> . FLOAT
    (70) type -> . VOID

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    VOID            shift and go to state 29

    type                           shift and go to state 38

state 36

    (23) funcs -> VOID ID LPAR func_vars RPAR . body SEMICOMMA
    (6) body -> . LBRACE statment RBRACE

    LBRACE          shift and go to state 40

    body                           shift and go to state 39

state 37

    (25) func_vars -> COMMA func_vars .

    RPAR            reduce using rule 25 (func_vars -> COMMA func_vars .)


state 38

    (24) func_vars -> ID DOUBLEPOINT type . func_vars
    (24) func_vars -> . ID DOUBLEPOINT type func_vars
    (25) func_vars -> . COMMA func_vars
    (26) func_vars -> . EMPTY
    (71) EMPTY -> .

    ID              shift and go to state 30
    COMMA           shift and go to state 32
    RPAR            reduce using rule 71 (EMPTY -> .)

    func_vars                      shift and go to state 41
    EMPTY                          shift and go to state 33

state 39

    (23) funcs -> VOID ID LPAR func_vars RPAR body . SEMICOMMA

    SEMICOMMA       shift and go to state 42


state 40

    (6) body -> LBRACE . statment RBRACE
    (7) statment -> . assign statment
    (8) statment -> . assign
    (9) statment -> . conditions
    (10) statment -> . conditions statment
    (11) statment -> . fcall
    (12) statment -> . fcall statment
    (13) statment -> . imprimir statment
    (14) statment -> . imprimir
    (15) statment -> . cycle statment
    (16) statment -> . cycle
    (17) statment -> . vars
    (18) statment -> . vars statment
    (19) assign -> . ID EQ expression SEMICOMMA
    (20) assign -> . ID EQ cte SEMICOMMA
    (52) conditions -> . IF LPAR expression RPAR body haselse SEMICOMMA
    (43) fcall -> . ID LPAR list_exp RPAR SEMICOMMA
    (55) imprimir -> . PRINT LPAR lst_printing_options RPAR SEMICOMMA
    (42) cycle -> . WHILE body DO LPAR expression RPAR SEMICOMMA
    (62) vars -> . VAR lst_var

    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 52
    WHILE           shift and go to state 53
    VAR             shift and go to state 8

    statment                       shift and go to state 43
    assign                         shift and go to state 44
    conditions                     shift and go to state 45
    fcall                          shift and go to state 46
    imprimir                       shift and go to state 47
    cycle                          shift and go to state 48
    vars                           shift and go to state 49

state 41

    (24) func_vars -> ID DOUBLEPOINT type func_vars .

    RPAR            reduce using rule 24 (func_vars -> ID DOUBLEPOINT type func_vars .)


state 42

    (23) funcs -> VOID ID LPAR func_vars RPAR body SEMICOMMA .

    VOID            reduce using rule 23 (funcs -> VOID ID LPAR func_vars RPAR body SEMICOMMA .)
    END             reduce using rule 23 (funcs -> VOID ID LPAR func_vars RPAR body SEMICOMMA .)


state 43

    (6) body -> LBRACE statment . RBRACE

    RBRACE          shift and go to state 54


state 44

    (7) statment -> assign . statment
    (8) statment -> assign .
    (7) statment -> . assign statment
    (8) statment -> . assign
    (9) statment -> . conditions
    (10) statment -> . conditions statment
    (11) statment -> . fcall
    (12) statment -> . fcall statment
    (13) statment -> . imprimir statment
    (14) statment -> . imprimir
    (15) statment -> . cycle statment
    (16) statment -> . cycle
    (17) statment -> . vars
    (18) statment -> . vars statment
    (19) assign -> . ID EQ expression SEMICOMMA
    (20) assign -> . ID EQ cte SEMICOMMA
    (52) conditions -> . IF LPAR expression RPAR body haselse SEMICOMMA
    (43) fcall -> . ID LPAR list_exp RPAR SEMICOMMA
    (55) imprimir -> . PRINT LPAR lst_printing_options RPAR SEMICOMMA
    (42) cycle -> . WHILE body DO LPAR expression RPAR SEMICOMMA
    (62) vars -> . VAR lst_var

    RBRACE          reduce using rule 8 (statment -> assign .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 52
    WHILE           shift and go to state 53
    VAR             shift and go to state 8

    assign                         shift and go to state 44
    statment                       shift and go to state 55
    conditions                     shift and go to state 45
    fcall                          shift and go to state 46
    imprimir                       shift and go to state 47
    cycle                          shift and go to state 48
    vars                           shift and go to state 49

state 45

    (9) statment -> conditions .
    (10) statment -> conditions . statment
    (7) statment -> . assign statment
    (8) statment -> . assign
    (9) statment -> . conditions
    (10) statment -> . conditions statment
    (11) statment -> . fcall
    (12) statment -> . fcall statment
    (13) statment -> . imprimir statment
    (14) statment -> . imprimir
    (15) statment -> . cycle statment
    (16) statment -> . cycle
    (17) statment -> . vars
    (18) statment -> . vars statment
    (19) assign -> . ID EQ expression SEMICOMMA
    (20) assign -> . ID EQ cte SEMICOMMA
    (52) conditions -> . IF LPAR expression RPAR body haselse SEMICOMMA
    (43) fcall -> . ID LPAR list_exp RPAR SEMICOMMA
    (55) imprimir -> . PRINT LPAR lst_printing_options RPAR SEMICOMMA
    (42) cycle -> . WHILE body DO LPAR expression RPAR SEMICOMMA
    (62) vars -> . VAR lst_var

    RBRACE          reduce using rule 9 (statment -> conditions .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 52
    WHILE           shift and go to state 53
    VAR             shift and go to state 8

    conditions                     shift and go to state 45
    statment                       shift and go to state 56
    assign                         shift and go to state 44
    fcall                          shift and go to state 46
    imprimir                       shift and go to state 47
    cycle                          shift and go to state 48
    vars                           shift and go to state 49

state 46

    (11) statment -> fcall .
    (12) statment -> fcall . statment
    (7) statment -> . assign statment
    (8) statment -> . assign
    (9) statment -> . conditions
    (10) statment -> . conditions statment
    (11) statment -> . fcall
    (12) statment -> . fcall statment
    (13) statment -> . imprimir statment
    (14) statment -> . imprimir
    (15) statment -> . cycle statment
    (16) statment -> . cycle
    (17) statment -> . vars
    (18) statment -> . vars statment
    (19) assign -> . ID EQ expression SEMICOMMA
    (20) assign -> . ID EQ cte SEMICOMMA
    (52) conditions -> . IF LPAR expression RPAR body haselse SEMICOMMA
    (43) fcall -> . ID LPAR list_exp RPAR SEMICOMMA
    (55) imprimir -> . PRINT LPAR lst_printing_options RPAR SEMICOMMA
    (42) cycle -> . WHILE body DO LPAR expression RPAR SEMICOMMA
    (62) vars -> . VAR lst_var

    RBRACE          reduce using rule 11 (statment -> fcall .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 52
    WHILE           shift and go to state 53
    VAR             shift and go to state 8

    fcall                          shift and go to state 46
    statment                       shift and go to state 57
    assign                         shift and go to state 44
    conditions                     shift and go to state 45
    imprimir                       shift and go to state 47
    cycle                          shift and go to state 48
    vars                           shift and go to state 49

state 47

    (13) statment -> imprimir . statment
    (14) statment -> imprimir .
    (7) statment -> . assign statment
    (8) statment -> . assign
    (9) statment -> . conditions
    (10) statment -> . conditions statment
    (11) statment -> . fcall
    (12) statment -> . fcall statment
    (13) statment -> . imprimir statment
    (14) statment -> . imprimir
    (15) statment -> . cycle statment
    (16) statment -> . cycle
    (17) statment -> . vars
    (18) statment -> . vars statment
    (19) assign -> . ID EQ expression SEMICOMMA
    (20) assign -> . ID EQ cte SEMICOMMA
    (52) conditions -> . IF LPAR expression RPAR body haselse SEMICOMMA
    (43) fcall -> . ID LPAR list_exp RPAR SEMICOMMA
    (55) imprimir -> . PRINT LPAR lst_printing_options RPAR SEMICOMMA
    (42) cycle -> . WHILE body DO LPAR expression RPAR SEMICOMMA
    (62) vars -> . VAR lst_var

    RBRACE          reduce using rule 14 (statment -> imprimir .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 52
    WHILE           shift and go to state 53
    VAR             shift and go to state 8

    imprimir                       shift and go to state 47
    statment                       shift and go to state 58
    assign                         shift and go to state 44
    conditions                     shift and go to state 45
    fcall                          shift and go to state 46
    cycle                          shift and go to state 48
    vars                           shift and go to state 49

state 48

    (15) statment -> cycle . statment
    (16) statment -> cycle .
    (7) statment -> . assign statment
    (8) statment -> . assign
    (9) statment -> . conditions
    (10) statment -> . conditions statment
    (11) statment -> . fcall
    (12) statment -> . fcall statment
    (13) statment -> . imprimir statment
    (14) statment -> . imprimir
    (15) statment -> . cycle statment
    (16) statment -> . cycle
    (17) statment -> . vars
    (18) statment -> . vars statment
    (19) assign -> . ID EQ expression SEMICOMMA
    (20) assign -> . ID EQ cte SEMICOMMA
    (52) conditions -> . IF LPAR expression RPAR body haselse SEMICOMMA
    (43) fcall -> . ID LPAR list_exp RPAR SEMICOMMA
    (55) imprimir -> . PRINT LPAR lst_printing_options RPAR SEMICOMMA
    (42) cycle -> . WHILE body DO LPAR expression RPAR SEMICOMMA
    (62) vars -> . VAR lst_var

    RBRACE          reduce using rule 16 (statment -> cycle .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 52
    WHILE           shift and go to state 53
    VAR             shift and go to state 8

    cycle                          shift and go to state 48
    statment                       shift and go to state 59
    assign                         shift and go to state 44
    conditions                     shift and go to state 45
    fcall                          shift and go to state 46
    imprimir                       shift and go to state 47
    vars                           shift and go to state 49

state 49

    (17) statment -> vars .
    (18) statment -> vars . statment
    (7) statment -> . assign statment
    (8) statment -> . assign
    (9) statment -> . conditions
    (10) statment -> . conditions statment
    (11) statment -> . fcall
    (12) statment -> . fcall statment
    (13) statment -> . imprimir statment
    (14) statment -> . imprimir
    (15) statment -> . cycle statment
    (16) statment -> . cycle
    (17) statment -> . vars
    (18) statment -> . vars statment
    (19) assign -> . ID EQ expression SEMICOMMA
    (20) assign -> . ID EQ cte SEMICOMMA
    (52) conditions -> . IF LPAR expression RPAR body haselse SEMICOMMA
    (43) fcall -> . ID LPAR list_exp RPAR SEMICOMMA
    (55) imprimir -> . PRINT LPAR lst_printing_options RPAR SEMICOMMA
    (42) cycle -> . WHILE body DO LPAR expression RPAR SEMICOMMA
    (62) vars -> . VAR lst_var

    RBRACE          reduce using rule 17 (statment -> vars .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 52
    WHILE           shift and go to state 53
    VAR             shift and go to state 8

    vars                           shift and go to state 49
    statment                       shift and go to state 60
    assign                         shift and go to state 44
    conditions                     shift and go to state 45
    fcall                          shift and go to state 46
    imprimir                       shift and go to state 47
    cycle                          shift and go to state 48

state 50

    (19) assign -> ID . EQ expression SEMICOMMA
    (20) assign -> ID . EQ cte SEMICOMMA
    (43) fcall -> ID . LPAR list_exp RPAR SEMICOMMA

    EQ              shift and go to state 61
    LPAR            shift and go to state 62


state 51

    (52) conditions -> IF . LPAR expression RPAR body haselse SEMICOMMA

    LPAR            shift and go to state 63


state 52

    (55) imprimir -> PRINT . LPAR lst_printing_options RPAR SEMICOMMA

    LPAR            shift and go to state 64


state 53

    (42) cycle -> WHILE . body DO LPAR expression RPAR SEMICOMMA
    (6) body -> . LBRACE statment RBRACE

    LBRACE          shift and go to state 40

    body                           shift and go to state 65

state 54

    (6) body -> LBRACE statment RBRACE .

    SEMICOMMA       reduce using rule 6 (body -> LBRACE statment RBRACE .)
    DO              reduce using rule 6 (body -> LBRACE statment RBRACE .)
    ELSE            reduce using rule 6 (body -> LBRACE statment RBRACE .)


state 55

    (7) statment -> assign statment .

    RBRACE          reduce using rule 7 (statment -> assign statment .)


state 56

    (10) statment -> conditions statment .

    RBRACE          reduce using rule 10 (statment -> conditions statment .)


state 57

    (12) statment -> fcall statment .

    RBRACE          reduce using rule 12 (statment -> fcall statment .)


state 58

    (13) statment -> imprimir statment .

    RBRACE          reduce using rule 13 (statment -> imprimir statment .)


state 59

    (15) statment -> cycle statment .

    RBRACE          reduce using rule 15 (statment -> cycle statment .)


state 60

    (18) statment -> vars statment .

    RBRACE          reduce using rule 18 (statment -> vars statment .)


state 61

    (19) assign -> ID EQ . expression SEMICOMMA
    (20) assign -> ID EQ . cte SEMICOMMA
    (27) expression -> . exp op
    (21) cte -> . CTE_INT
    (22) cte -> . CTE_FLOAT
    (34) exp -> . termino lopb
    (38) termino -> . factor lopa
    (47) factor -> . LPAR expression RPAR
    (48) factor -> . lopb id_cte
    (49) factor -> . id_cte
    (35) lopb -> . PLUS termino
    (36) lopb -> . MINUS termino
    (37) lopb -> . EMPTY
    (50) id_cte -> . ID
    (51) id_cte -> . cte
    (71) EMPTY -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for CTE_INT resolved as shift
  ! shift/reduce conflict for CTE_FLOAT resolved as shift
    CTE_INT         shift and go to state 70
    CTE_FLOAT       shift and go to state 71
    LPAR            shift and go to state 75
    PLUS            shift and go to state 77
    MINUS           shift and go to state 78
    ID              shift and go to state 66

  ! ID              [ reduce using rule 71 (EMPTY -> .) ]
  ! CTE_INT         [ reduce using rule 71 (EMPTY -> .) ]
  ! CTE_FLOAT       [ reduce using rule 71 (EMPTY -> .) ]

    expression                     shift and go to state 67
    cte                            shift and go to state 68
    exp                            shift and go to state 69
    termino                        shift and go to state 72
    lopb                           shift and go to state 73
    factor                         shift and go to state 74
    id_cte                         shift and go to state 76
    EMPTY                          shift and go to state 79

state 62

    (43) fcall -> ID LPAR . list_exp RPAR SEMICOMMA
    (44) list_exp -> . expression list_exp
    (45) list_exp -> . EMPTY
    (46) list_exp -> . COMMA list_exp
    (27) expression -> . exp op
    (71) EMPTY -> .
    (34) exp -> . termino lopb
    (38) termino -> . factor lopa
    (47) factor -> . LPAR expression RPAR
    (48) factor -> . lopb id_cte
    (49) factor -> . id_cte
    (35) lopb -> . PLUS termino
    (36) lopb -> . MINUS termino
    (37) lopb -> . EMPTY
    (50) id_cte -> . ID
    (51) id_cte -> . cte
    (21) cte -> . CTE_INT
    (22) cte -> . CTE_FLOAT

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for CTE_INT resolved as shift
  ! shift/reduce conflict for CTE_FLOAT resolved as shift
    COMMA           shift and go to state 83
    RPAR            reduce using rule 71 (EMPTY -> .)
    LPAR            shift and go to state 75
    PLUS            shift and go to state 77
    MINUS           shift and go to state 78
    ID              shift and go to state 66
    CTE_INT         shift and go to state 70
    CTE_FLOAT       shift and go to state 71

  ! ID              [ reduce using rule 71 (EMPTY -> .) ]
  ! CTE_INT         [ reduce using rule 71 (EMPTY -> .) ]
  ! CTE_FLOAT       [ reduce using rule 71 (EMPTY -> .) ]

    list_exp                       shift and go to state 80
    expression                     shift and go to state 81
    EMPTY                          shift and go to state 82
    exp                            shift and go to state 69
    termino                        shift and go to state 72
    lopb                           shift and go to state 73
    factor                         shift and go to state 74
    id_cte                         shift and go to state 76
    cte                            shift and go to state 84

state 63

    (52) conditions -> IF LPAR . expression RPAR body haselse SEMICOMMA
    (27) expression -> . exp op
    (34) exp -> . termino lopb
    (38) termino -> . factor lopa
    (47) factor -> . LPAR expression RPAR
    (48) factor -> . lopb id_cte
    (49) factor -> . id_cte
    (35) lopb -> . PLUS termino
    (36) lopb -> . MINUS termino
    (37) lopb -> . EMPTY
    (50) id_cte -> . ID
    (51) id_cte -> . cte
    (71) EMPTY -> .
    (21) cte -> . CTE_INT
    (22) cte -> . CTE_FLOAT
